New Stable Version v2.0.2.4r

--- a/RiotDNS/App.xaml
+++ b/RiotDNS/App.xaml
@@ -21,7 +21,7 @@
 
                             <Grid>
 
-                                <Image Source="Assets/wifi_icon.png"
+                                <Image Source="Assets/dns_icon.png"
                                        Stretch="None" />
 
                             </Grid>
